# llm-skt-mvp

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
resource/: ERD.md.example
resource/prompt/: advanced_sql_agent.template  basic_sql_agent.template  optimized_sql_agent.template
src/: SQL_Query_Agent.py  config.py  streamlit_app.py  utils.py
